--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
-useDynLib(spatialT2, .registration=TRUE)
+useDynLib(NNRCM, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
