update marginal prediction function name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,4 @@ export(NNRCM.hierarchical.predict)
 export(NNRCM.marginal.infer)
 export(NNRCM.marginal.predict)
 export(NNRCM.scores)
-export(mv.NNRCM.posterior.predictive)
+export(NNRCM.bv.marginal.predict)
