--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ export(NNRCM.marginal.infer)
 export(NNRCM.marginal.predict)
 export(NNRCM.scores)
 export(NNRCM.bv.marginal.predict)
+export(mv.marginal.likelihood.optim)
